[gd_scene load_steps=2 format=3 uid="uid://cr55mcfp6m8ka"]

[ext_resource type="Script" path="res://components/interact/hitbox_component.gd" id="1_2ojwo"]

[node name="HitboxComponent" type="Area2D"]
script = ExtResource("1_2ojwo")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]

[connection signal="area_entered" from="." to="." method="_on_hurtbox_entered"]
